--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 ------------ */
 
 /* 1 .=============================== General Start ===============================*/
-/* @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -35,7 +35,7 @@
 
 
     /* Text Style  */
-    --primary-font: 'AcuminConcept-Light', sans-serif;
+    --primary-font: 'Roboto', sans-serif;
 
 }
 
@@ -71,7 +71,6 @@ a {
 .custom_dropdown .dropdown-menu {
     border     : none;
     filter     : var(--dropmenu-box-shadow) !important;
-    margin-top : 14px;
     margin-left: 70px;
 }
 
@@ -111,6 +110,11 @@ a {
     color      : var(--blue-zodiac) !important;
 }
 
+.form-check-input {
+    border: none;
+    filter: drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
+}
+
 .form-check-input:checked {
     background-color: var(--blue-zodiac);
     border-color    : transparent;
@@ -122,7 +126,9 @@ a {
 
 .navbar .navbar-nav .nav-link {
     padding    : 0;
-    line-height: 50px;
+    line-height: 55px;
+    font-family: var(--primary-font);
+    font-size  : 17px;
 }
 
 .navbar .navbar-nav .nav-link,
@@ -132,13 +138,13 @@ a {
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link {
-    color    : var(--blue-zodiac);
-    font-size: 17px;
+    color: var(--blue-zodiac);
 }
 
 
 .navbar .dropdown-toggle::after {
     margin-left   : 0px;
+    font-size     : 23px;
     vertical-align: middle;
     border        : none;
     content       : "\f107";
@@ -153,10 +159,11 @@ a {
 }
 
 .logout::before {
-    margin-top : 10px;
     content    : "\007C";
-    font-weight: 800;
-    width      : 21px;
+    font-weight: bold;
+    width      : 23px;
+    font-size  : 25px;
+    margin-top : 6px;
     color      : var(--blue-zodiac);
 }
 
@@ -175,7 +182,7 @@ a {
     border       : 0;
     font-size    : 14px;
     color        : var(--blue-zodiac);
-    border       : 1px solid rgba(1, 41, 112, 0.2);
+    filter       : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
     padding      : 7px 38px 7px 8px;
     border-radius: 3px;
     transition   : 0.3s;
@@ -193,6 +200,7 @@ a {
     padding    : 0;
     margin-left: -25px;
     background : none;
+    z-index    : 1;
 }
 
 .search-form button i {
@@ -205,6 +213,8 @@ a {
 
 .add_post span {
     line-height: 17px;
+    font-size  : 14px;
+    font-family: var(--primary-font);
 }
 
 .add_post i {
