--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@
     --icon-box-shadow      : drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.33));
     --dropmenu-box-shadow  : drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.09));
     --switch-box-shadow    : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
+    --policy-check-shadow  : drop-shadow(0px 0px 6.5px rgba(0, 0, 0, 0.17));
     --search-btn-box-shadow: 0px 0px 14.5px rgba(0, 0, 0, 0.15);
 
 
@@ -525,7 +526,8 @@ a {
 }
 
 .custom_control .form-check-input:checked[type=checkbox],
-.search_check .form-check-input:checked[type=checkbox] {
+.search_check .form-check-input:checked[type=checkbox],
+.policieschecks .form-check-input:checked[type=checkbox] {
     background-image: url(../images/icons/check.png);
     background-color: var(--white);
 }
@@ -533,7 +535,10 @@ a {
 .custom_checks {
     background-color: var(--white);
     filter          : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.1));
-    ;
+}
+
+.policieschecks {
+    filter: var(--policy-check-shadow)
 }
 
 .slick-prev:before,
@@ -725,7 +730,7 @@ a {
 }
 
 /* ============================== Custom Search End ============================== */
-/* ============================== Custom Search End ============================== */
+/* ============================== Small screens footer Start ============================== */
 .footer_block {
     display: none;
 }
@@ -741,14 +746,61 @@ a {
 
 .footer_block_btn p {
     padding: 0 10px;
-    color  : var(--white-smoke);
+    color  : var(--oslo-grey);
 }
 
 .footer_block_btn p a {
     color: var(--blue-zodiac);
 }
 
-/* ============================== Custom Search End ============================== */
+/* ============================== Small screens footer End============================== */
+/* -------------------------------SignUp page -------------------------------  */
+/* SignUp page Start  */
+.smallscrnav_none {
+    display: block;
+}
+
+.smallscrnav_block {
+    display: none;
+}
+
+.content h3 {
+    color    : var(--blue-zodiac);
+    font-size: 30px;
+}
+
+.content p {
+    color: var(--blue-zodiac);
+}
+
+.content p a {
+    color: #2749BD;
+}
+
+.content .form-floating .form-control:focus {
+    border: 1px solid var(--leather);
+}
+
+.password_eye i {
+    cursor: pointer;
+    right : 12px;
+    bottom: 20px;
+}
+
+.login_button button {
+    height          : 58px;
+    font-size       : 25px;
+    background-color: var(--blue-zodiac);
+    color           : var(--white);
+
+}
+
+.login_button button:hover {
+    color: var(--white);
+
+}
+
+/* SignUp page End  */
 
 /* Responsive  */
 @media (max-width: 1239px) {
@@ -961,5 +1013,17 @@ a {
 
     .footer_block {
         display: block;
+    }
+
+    .smallscrnav_none {
+        display: none;
+    }
+
+    .smallscrnav_block {
+        display: block;
+    }
+
+    .content {
+        padding-top: 70px;
     }
 }
